Update code execution and fix some bugs
